fix dropdown overlap

--- a/datingWebsite/style.css
+++ b/datingWebsite/style.css
@@ -266,6 +266,7 @@ label{
   width:calc(100% - 8px);
   height:200px;
   overflow:auto;
+  z-index:10;
 }
 
 .smallbox{
